--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,13 @@ categories = ["api-bindings"]
 keywords = ["llvm"]
 
 [dependencies]
-libc = "*"
 anyhow = "1.0.79"
-llvm-sys = "130" # Uses the most current version of LLVM supported by llvmenv, 13.0.0
 derive_more = "0.99.17"
+libc = "0.2.152"
+llvm-sys = "170.0.1"
 paste = "1.0.14"
 # thiserror = "1.0.56" # TODO Use to build error types in final version?
+
+
+[lib]
+crate-type = ["rlib"]
